--- a/rating.css
+++ b/rating.css
@@ -4,10 +4,140 @@ html{
 body{
     box-sizing: inherit !important;
     margin: 0;
+    font-family: 'Overpass', sans-serif;
+    background-color: #121417;
 }
 
 .requestBody{
-    width: 100vw;
-    height: 100vh;
-    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 10px;
+    margin-top: 45%;
+    margin-bottom: 25%;
+    margin-left: 12.5px;
+    margin-right: 12.5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    width: 80vw;
+    height: 50vh;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #252d37;
 }
+
+.feedbackStar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: #33363b;
+    border-radius: 50%;
+}
+#star{
+    color: #fb7413;
+    scale: 1.2;
+}
+
+.feedbackRequest{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 10%;
+    width: 100%;
+    height: 35%;
+}
+.feedbackRequest h2{
+    margin: 0;
+}
+.requestStatement{
+    font-size: 15px;
+    color:#959eac;
+}
+
+.ratingValue{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    height: 20%;
+}
+
+/*when hovered on the button should become brighter in color (light-gray)...
+after selecting a certain value it should change the background-color
+to orange*/
+.ratingValue button{
+    width: 40px;
+    height: 40px;
+    align-self: center;
+    border: 0;
+    border-radius: 50%;
+    color: #fff;
+    background-color: #30343b;
+    font-family: 'Overpass', sans-serif;
+}
+
+/* when clicked should change background color to white 
+text color to orange */
+#submitButton{
+    width: 100%;
+    height: 45px;
+    padding: 10px;
+    border: 0;
+    border-radius: 30px;
+    text-align: center;
+    color: #fff;
+    background-color: #fb7413;
+    font-family: 'Overpass', sans-serif;
+    font-weight: 700;
+}
+
+.responseBody{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 45%;
+    margin-bottom: 25%;
+    margin-left: 12.5px;
+    margin-right: 12.5px;
+    padding-left: 25px;
+    padding-right: 25px;
+    width: 80vw;
+    height: 50vh;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #252d37;
+}
+
+.selectedValue{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 70%;
+    height: 10%;
+    border-radius: 30px;
+    font-size: 15px;
+    color:#fb7413;
+    background-color:#30343b;
+}
+#valueText{
+    margin: 0;
+}
+
+.appreciatingFeedback{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 20px;
+}
+.appreciatingFeedback h2, p{
+    margin: 0;
+}
+
